src/components/Header/BurgerNav/style.css
.navBurger {
    position: absolute;
    top: -1.7rem;
    left: 0;
    right: 0;
    background-color: var(--denim);
    width: 100%;
    height: 101vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navBurger > ul {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    align-items: center;
}

.botaoHamburguer {
    scale: 0.65;
    width: 1rem;
    z-index: 1;
    margin-top: -0.55rem;
}

.botao-hover {
    margin-bottom: 5px;
    width: 3.8rem;
    height: 3.3rem;
    cursor: pointer;
}

#nav-icon {
    width: 50px;
    height: 4px;
    position: absolute;
    right: 0;
    top: 5px;
    margin-top: -1;
    margin-right: 0.9rem;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: 0.5s ease-in-out;
    -moz-transition: 0.5s ease-in-out;
    -o-transition: 0.5s ease-in-out;
    transition: 0.5s ease-in-out;
    cursor: pointer;
}

#nav-icon {
    width: 50px;
    height: 4px;
    position: absolute;
    right: 0;
    top: 0px;
    margin-top: -1;
    margin-right: 0.9rem;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: 0.5s ease-in-out;
    -moz-transition: 0.5s ease-in-out;
    -o-transition: 0.5s ease-in-out;
    transition: 0.5s ease-in-out;
    cursor: pointer;
}

#nav-icon span {
    display: block;
    position: absolute;
    height: 6px;
    width: 50px;
    background: var(--athens);
    opacity: 1;
    left: 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: 0.35s ease-in-out;
    -moz-transition: 0.35s ease-in-out;
    -o-transition: 0.35s ease-in-out;
    transition: 0.35s ease-in-out;
}

#nav-icon span:nth-child(1) {
    top: 0px;
    -webkit-transform-origin: left center;
    -moz-transform-origin: left center;
    -o-transform-origin: left center;
    transform-origin: left center;
}

#nav-icon span:nth-child(2) {
    top: 16px;
    -webkit-transform-origin: left center;
    -moz-transform-origin: left center;
    -o-transform-origin: left center;
    transform-origin: left center;
}

#nav-icon span:nth-child(3) {
    top: 32px;
    -webkit-transform-origin: left center;
    -moz-transform-origin: left center;
    -o-transform-origin: left center;
    transform-origin: left center;
}

#nav-icon.open span:nth-child(1) {
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
    top: 0;
    left: 0;
}

#nav-icon.open span:nth-child(2) {
    width: 0%;
    opacity: 0;
}

#nav-icon.open span:nth-child(3) {
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform: rotate(-45deg);
    top: 34px;
    left: 0;
}


@keyframes slideIn {
    0% {
        transform: translateX(100%);
    }

    100% {
        transform: translateX(0);
    }
}

@keyframes slideOut {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(100%);
    }
}

.navBurger.open {
    animation: slideIn 0.4s ease forwards;
}

.navBurger.close {
    visibility: hidden;
    animation: slideOut 0.4s ease forwards;
    transition: 500ms ease;
}

.botao-hover:hover .hoverEffect {
    transform: scaleX(0.75) !important;
}

